# QR-Generator

./: main.py  pyproject.toml
