[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "opencv-python==4.10.0.84",
    "pandas>=2.2.3",
    "pillow==11.0.0",
    "pypng>=0.20220715.0",
    "pyqrcode>=1.2.1",
    "qrcode>=8.0",
]
